# browser-experiments

./: .gitignore  .gitmodules  NOTES.txt  README.md  copy_graphs.sh  gen_latex.sh  gen_pdf.sh  kill_evolution.sh  mega.sh  pyproject.toml  shell.nix  shell.nix.bak  sort.sh  types-pyautogui.nix  types-pyperclip.nix  types-pyscreeze.nix
experiments/: __init__.py  __main__.py  blank_chromium.py  blank_firefox.py  blank_web.py  calendar_native.py  classic_with_samples.py  graphs_template_6.tex  graphs_template_9.tex  mail_native.py
experiments/browser_bench/: __init__.py
experiments/calendar_chromium/: __init__.py
experiments/calendar_firefox/: __init__.py
experiments/calendar_web/: __init__.py
experiments/chat_chromium/: __init__.py  __main__.py
experiments/chat_firefox/: __init__.py
experiments/chat_native/: __init__.py
experiments/chat_web/: __init__.py
experiments/lib/: __init__.py  add-file.sh  gen-info.sh
experiments/mail_chromium/: __init__.py
experiments/mail_firefox/: __init__.py
experiments/mail_native/: __init__.py  __main__.py
experiments/mail_web/: __init__.py
